# mistral-app

./: .gitignore  LICENSE  README.md  package.json
.github/workflows/: build.yml
src/: index.html  launcher.css  launcher.html  launcher.js  settings.css  settings.html  settings.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
